Add start/stop observables

--- a/src/components/boss-bars/boss-bars.html
+++ b/src/components/boss-bars/boss-bars.html
@@ -1,7 +1,7 @@
 <div id="BossBars">
   <!-- health bar -->
   <div id="progressBarContainer">
-    <div id="bossHealthTextBar">{{_getBossCurrentHealth()}}/{{_getBossBaseHealth()}}</div>
+    <div id="bossHealthTextBar">{{_getBossFormatHealth()}}</div>
     <div id="bossHealthBar"></div>
   </div>
   <!-- progress bar -->
