--- a/src/components/player-bars/player-bars.html
+++ b/src/components/player-bars/player-bars.html
@@ -1,21 +1,26 @@
-<div id="topBars">
-  <!-- health bar -->
-  <div id="progressBarContainer">
-    <div id="heathTextBar">{{getPlayerFormatHealth()}}</div>
-    <div id="healthBar"></div>
-  </div>
-  <!-- mana bar -->
-  <div id="progressBarContainer">
-    <div id="manaTextBar">{{getPlayerFormatMana()}}</div>
-    <div id="manaBar"></div>
-  </div>
-  <!-- progress bar -->
-  <div>
-    <div [hidden]="!_isLoadingSpell()" id="progressBarContainer">
-      <div id="progressBar"></div>
-    </div>
-    <div [hidden]="_isLoadingSpell()" id="progressBarContainer">
-      &#8203;
-    </div>
-  </div>
-</div>
+<ion-row>
+    <!-- left -->
+    <ion-col>
+      <img src="assets/images/heartplayer11.svg"/>
+    </ion-col>
+    <!-- right -->
+    <ion-col col-10>
+      <!-- health bar -->
+      <div id="progressBarContainer">
+        <div id="healthTextBar">{{getPlayerFormatHealth()}}</div>
+        <div id="healthBar"></div>
+      </div>
+      <!-- mana bar -->
+      <div id="progressBarContainer">
+        <div id="manaTextBar">{{getPlayerFormatMana()}}</div>
+        <div id="manaBar"></div>
+      </div>
+      <!-- progress bar -->
+      <div [hidden]="!_isLoadingSpell()" id="progressBarContainer">
+        <div id="progressBar"></div>
+      </div>
+      <div [hidden]="_isLoadingSpell()" id="progressBarContainer">
+        &#8203;
+      </div>
+    </ion-col>
+  </ion-row>
