--- a/src/pages/grid/grid.scss
+++ b/src/pages/grid/grid.scss
@@ -1,5 +1,23 @@
 page-grid {
 
+    div.centerpanel {
+    width:100%;
+    height:100%;
+    text-align: center;
+    }
+    .leftpanel {
+    display:inline-block;
+    width:15%;
+    }
+    .rightpanel {
+    display:inline-block;
+    width:80%;
+    }
+
+    .boss{
+    height:38px;
+    }
+
     /*----------------------------------------
     //  Boss bars
     //----------------------------------------*/
@@ -88,7 +106,7 @@ page-grid {
     color: white;
     }
 
-    #heathTextBar {
+    #healthTextBar {
         z-index: 100;
         position: absolute;
         color: white;
@@ -256,5 +274,43 @@ button.imgButton {
   background-size:cover; /* <-- scale the image to cover the button */
   background-position:center center; /* <-- center the image in the button */
 }
+
+/*----------------------------------------
+//  tutorial modal
+//----------------------------------------*/
+
+  .toolbar-background {
+    background: #fff;
+    border-color: transparent;
+  }
+
+  .slide-zoom {
+    height: 100%;
+  }
+
+  .slide-title {
+    margin-top: 2.8rem;
+  }
+
+  .slide-image {
+    max-height: 50%;
+    max-width: 60%;
+    margin: 18px 0;
+  }
+
+  b {
+    font-weight: 500;
+  }
+
+  p {
+    padding: 0 40px;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #60646B;
+
+    b {
+      color: #000000;
+    }
+  }
 
 }
