--- a/src/components/boss-bars/boss-bars.html
+++ b/src/components/boss-bars/boss-bars.html
@@ -6,16 +6,16 @@
   <!-- right -->
   <div class="rightpanel">
     <!-- health bar -->
-    <div id="progressBarContainer">
+    <div class="progressBarContainer">
       <div id="bossHealthTextBar">{{_getBossFormatHealth()}}</div>
       <div id="bossHealthBar"></div>
     </div>
     <!-- progress bar -->
     <div>
-      <div [hidden]="false==false" id="progressBarContainer">
+      <div [hidden]="false==false" class="progressBarContainer">
         <div id="progressBar"></div>
       </div>
-      <div [hidden]="true==false" id="progressBarContainer">
+      <div [hidden]="true==false" class="progressBarContainer">
         &#8203;
       </div>
     </div>
