--- a/src/components/player-bars/player-bars.html
+++ b/src/components/player-bars/player-bars.html
@@ -6,20 +6,20 @@
     <!-- right -->
     <ion-col col-10>
       <!-- health bar -->
-      <div id="progressBarContainer">
+      <div class="progressBarContainer">
         <div id="healthTextBar">{{getPlayerFormatHealth()}}</div>
         <div id="healthBar"></div>
       </div>
       <!-- mana bar -->
-      <div id="progressBarContainer">
+      <div class="progressBarContainer">
         <div id="manaTextBar">{{getPlayerFormatMana()}}</div>
         <div id="manaBar"></div>
       </div>
       <!-- progress bar -->
-      <div [hidden]="!_isLoadingSpell()" id="progressBarContainer">
+      <div [hidden]="!_isLoadingSpell()" class="progressBarContainer">
         <div id="progressBar"></div>
       </div>
-      <div [hidden]="_isLoadingSpell()" id="progressBarContainer">
+      <div [hidden]="_isLoadingSpell()" class="progressBarContainer">
         &#8203;
       </div>
     </ion-col>
