--- a/src/components/boss-bars/boss-bars.html
+++ b/src/components/boss-bars/boss-bars.html
@@ -12,11 +12,8 @@
     </div>
     <!-- progress bar -->
     <div>
-      <div [hidden]="false==false" class="progressBarContainer">
+      <div class="progressBarContainer">
         <div id="progressBar"></div>
-      </div>
-      <div [hidden]="true==false" class="progressBarContainer">
-        &#8203;
       </div>
     </div>
   </div>
