--- a/src/pages/grid/grid.scss
+++ b/src/pages/grid/grid.scss
@@ -261,4 +261,41 @@ button.imgButton {
   background-position:center center; /* <-- center the image in the button */
 }
 
+/* -------bosstalk--------- */
+
+.boss-talk{
+    font-size: 15px;
+}
+
+.bubble{
+    background-color: #F2F2F2;
+    border-radius: 5px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    vertical-align: top;
+}
+
+.bubble::before {
+    background-color: #F2F2F2;
+    content: "v";
+    display: block;
+    height: 16px;
+    position: absolute;
+    top: 11px;
+    transform: rotate( 29deg ) skew( -35deg );
+    -moz-transform: rotate( 29deg ) skew( -35deg );
+    -ms-transform: rotate( 29deg ) skew( -35deg );
+    -o-transform: rotate( 29deg ) skew( -35deg );
+    -webkit-transform: rotate( 45deg ) skew( -35deg );
+    width: 5px;
+    left: -5px;
+    color: #898989;
+}
+
+.me {
+    float: left;    
+} 
+
 }
