update boss speech position

--- a/src/components/boss-bars/boss-bars.html
+++ b/src/components/boss-bars/boss-bars.html
@@ -5,7 +5,7 @@
   </div>
   <!-- right -->
   <div class="rightpanel">
-    <div [hidden]="bossSpeedDisplay">
+    <div>
     <div class="progressBarContainer">
       <div id="bossHealthTextBar">{{_getBossFormatHealth()}}</div>
       <div id="bossHealthBar"></div>
