--- a/src/pages/grid/grid.scss
+++ b/src/pages/grid/grid.scss
@@ -272,9 +272,11 @@ button.imgButton {
     border-radius: 5px;
     box-shadow: 0 0 6px #B2B2B2;
     display: inline-block;
-    padding: 10px 18px;
+    padding: 15px 18px;
     position: relative;
     vertical-align: top;
+    position: fixed;
+    z-index: 9999;
 }
 
 .bubble::before {
@@ -295,7 +297,9 @@ button.imgButton {
 }
 
 .me {
-    float: left;    
+    float: left;
+    top: 74%;
+    width: 70%;
 } 
 
 }
