--- a/src/components/boss-bars/boss-bars.html
+++ b/src/components/boss-bars/boss-bars.html
@@ -5,7 +5,7 @@
   </div>
   <!-- right -->
   <div class="rightpanel">
-    <div>
+    <div [hidden]="bossSpeechDisplay">
     <div class="progressBarContainer">
       <div id="bossHealthTextBar">{{_getBossFormatHealth()}}</div>
       <div id="bossHealthBar"></div>
@@ -16,7 +16,7 @@
       </div>
     </div>
     </div>
-    <div class="boss-talk" [hidden]="!bossSpeedDisplay">
+    <div class="boss-talk" [hidden]="!bossSpeechDisplay">
       <div class="bubble me animated infinite pulse">{{bossSpeech}}</div>
     </div>
   </div>
