--- a/src/pages/grid/grid.scss
+++ b/src/pages/grid/grid.scss
@@ -299,4 +299,33 @@ button.imgButton {
     float: left;    
 } 
 
+/* --- icons */
+.icon-container {
+  position: relative;
+}
+
+.icon-cooldown-value {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  transition: .5s ease;
+}
+
+.icon-cooldown-value-display {
+  opacity: 1;
+}
+
+.icon-cooldown-text {
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
 }
