--- a/src/pages/grid/grid.scss
+++ b/src/pages/grid/grid.scss
@@ -14,8 +14,14 @@ page-grid {
     width:80%;
     }
 
-    .boss{
-    height:38px;
+    .boss {
+    height:42px;
+    }
+
+    .boss-overlay{
+        border-radius: 5px;
+        position: relative;
+        z-index: 9999;
     }
 
     /*----------------------------------------
@@ -276,10 +282,11 @@ button.imgButton {
     position: relative;
     vertical-align: top;
     height: 48px;
+    z-index: 9999
 }
 
 .bubble::before {
-    background-color: #F2F2F2;
+    background-color: rgba(255, 255, 255, 0);
     content: "v";
     display: block;
     height: 16px;
@@ -292,7 +299,7 @@ button.imgButton {
     -webkit-transform: rotate( 45deg ) skew( -35deg );
     width: 5px;
     left: -5px;
-    color: #898989;
+    color: black;
 }
 
 .me {
@@ -327,5 +334,30 @@ button.imgButton {
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
 }
+
+.modal-wrapper-alertlike {
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+}
+
+.modal-wrapper-alertlike-middle {
+    position: absolute;
+    width: 90%;
+    height: 30%; 
+    top: 20%;
+    left: 5%;
+    background: white;
+  }
+
+  .game-overlay {
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    bottom:0%;
+    left: 0%;
+    position: absolute;
+    z-index: 101;
+  }
 
 }
